tests/docblock/docblock.exp

docblock.js:34:1,3: assignment of property `o`
Error:
docblock.js:34:3,3: property `o`
Property not found in
docblock.js:18:7,7: statics of C

Found 1 error
